--- a/themes/light-hugo/layouts/partials/header.html
+++ b/themes/light-hugo/layouts/partials/header.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-		<title>{{ .Title }} &middot; {{ .Site.Title }}</title>
+		<title>{{ .Title }}</title>
 		<link rel="canonical" href="{{ .Permalink }}">
 		<link rel="stylesheet" href="/css/syntax.css" />
 		<link rel="stylesheet" type="text/css" href="/css/main.css" />
