--- a/themes/light-hugo/layouts/post/summary.html
+++ b/themes/light-hugo/layouts/post/summary.html
@@ -10,7 +10,7 @@
 		</header>
 		<div class="summary">
 			{{ .Summary }}
-			<a href="{{ .RelPermalink }}">Read more...</a>
+			<a href="{{ .RelPermalink }}">More...</a>
 		</div>
 	</article>
 </div>
