--- a/static/css/main.css
+++ b/static/css/main.css
@@ -265,7 +265,7 @@ a:hover, #title h1:hover {
 }
 
 .listBody {
-    width: 25%;
+    width: auto;
     margin: 2% auto;
     background-color: #f2f2f2;
     box-shadow: 0px 0px 20px black;
@@ -284,7 +284,7 @@ a:hover, #title h1:hover {
 }
 
 .postBody {
-    width: 60%;
+    width: 90%;
     margin: 3% auto;
     background-color: #f2f2f2;
     box-shadow: 0px 0px 20px black;
