--- a/themes/hugo-tranquilpeak-theme/layouts/_default/list.html
+++ b/themes/hugo-tranquilpeak-theme/layouts/_default/list.html
@@ -10,7 +10,7 @@
                {{ with .Params.coverCaption }}hasCoverCaption{{ end }}">
         <section class="postShorten-group main-content-wrap">
           {{/* Iterate only over pages of the same type as this section. */}}
-          {{ $paginator := .Paginate (where .Data.Pages "Type" .Type) }}
+          {{ $paginator := .Paginate (where .Site.RegularPages "Type" .Type) }}
           {{ range $paginator.Pages }}
             {{ .Render "summary" }}
           {{ end }}
